--- a/styles/index.css
+++ b/styles/index.css
@@ -6,7 +6,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.heading {
   font-family: "Montserrat";
   @apply font-bold;
 }
@@ -21,7 +22,10 @@ body {
   @apply text-primary;
 }
 .menu-top {
-  @apply bg-transparent text-primary-text ;
+  @apply bg-transparent text-primary-text;
+}
+.menu-top .brand {
+  @apply transform origin-left scale-150;
 }
 /* Start purging... */
 @tailwind components;
