--- a/styles/index.css
+++ b/styles/index.css
@@ -16,7 +16,8 @@
     scroll-padding-top: theme("spacing.32");
   }
   body {
-    @apply bg-black;
+    background: url("/background.jpg") no-repeat center center fixed black;
+    background-size: cover;
   }
   .menu {
     @apply bg-white text-black shadow-lg;
