--- a/styles/index.css
+++ b/styles/index.css
@@ -14,9 +14,7 @@
   html {
     scroll-behavior: smooth;
     scroll-padding-top: theme("spacing.32");
-    background: url("/background.jpg") no-repeat center center fixed black;
-    background-size: cover;
-    height: 100%;
+    @apply bg-black;
   }
   .menu {
     @apply bg-white text-black shadow-lg;
@@ -29,6 +27,19 @@
   }
   .menu-top .brand {
     /* @apply transform origin-left scale-150; */
+  }
+  .bgimage {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    margin: 0;
+    background: url("/background.jpg") center center no-repeat;
+    background-size: cover;
   }
 }
 
