--- a/styles/index.css
+++ b/styles/index.css
@@ -56,7 +56,7 @@
         @apply h-10;
         filter: brightness(0) invert(1);
       }
-      & .menu-toggle {
+      & .menu-mobile-toggle {
         @apply text-white;
       }
     }
@@ -82,10 +82,10 @@
     }
   }
 
-  .menu-toggle {
-    @apply w-4 h-4 ml-auto;
+  .menu-mobile-toggle {
+    @apply text-2xl leading-6;
     & svg {
-      @apply align-top;
+      @apply align-middle inline;
     }
   }
   .menu {
